Fix hammer dependency for touch applications

--- a/support/client/lib/index.html
+++ b/support/client/lib/index.html
@@ -102,7 +102,10 @@
                     exports: "$"
                 },
                 "jquery-encoder-0.1.0": ["jquery"],
-                "require-hammer": ["hammer", "jquery"],
+                "hammer": {
+                    deps: ["jquery"],
+                    exports: "Hammer"
+                }
             }
         };
         require(requireConfig, ["jquery", "jquery-encoder-0.1.0"], function($) {
