Banish inline styles.

--- a/support/client/lib/index.html
+++ b/support/client/lib/index.html
@@ -154,9 +154,7 @@
     <div id="vwf-loading-spinner" class="pace pace-active"><div class="pace-activity"></div></div>
 
     <div id="incompatibleBrowser">
-        <div>
-            <span style="color:#3090C7;"><br/><br/>Your browser does not support Virtual World Framework. Please review our <a href='https://virtual.wf/requirements.html'>requirements</a> for supported browser versions.</span>
-        </div>
+        <span class="warning">Your browser does not support Virtual World Framework. Please review our <a href='https://virtual.wf/requirements.html'>requirements</a> for supported browser versions.</span>
     </div>
     <div id="vwf-root"></div>
   
