--- a/public/blockly/index.vwf.html
+++ b/public/blockly/index.vwf.html
@@ -11,16 +11,34 @@
 <!-- either express or implied. See the License for the specific language governing permissions  -->
 <!-- and limitations under the License.                                                          -->
 
-    <div id="blocklyDiv" style="height: 480px; width: 600px;"></div>
-    <xml id="toolbox" style="display: none">
-        <block type="controls_if"></block>
-        <block type="controls_repeat_ext"></block>
-        <block type="logic_compare"></block>
-        <block type="math_number"></block>
-        <block type="math_arithmetic"></block>
-        <block type="text"></block>
-        <block type="text_print"></block>
-    </xml>
-    <script type="text/javascript">
-        Blockly.inject( document.getElementById( 'blocklyDiv' ), { path: './blockly', toolbox: document.getElementById( 'toolbox' ) } );
-    </script>  
+<div id="blocklyDiv" style="height: 320px; width: 360px; opacity: 0.6;"></div>
+<table width="200">
+  <tr>
+    <td>
+      <button id="runButton" onclick="onRun()">Run</button>
+    </td>
+  </tr>
+</table>
+<xml id="toolbox" style="display: none;">
+  <block type="maze_moveForward"></block>
+  <block type="maze_turn"><field name="DIR">turnLeft</field></block>
+  <block type="maze_turn"><field name="DIR">turnRight</field></block>
+</xml>
+<script type="text/javascript">
+    Blockly.inject( document.getElementById( 'blocklyDiv' ), { 
+    	path: './blockly/', 
+    	toolbox: document.getElementById( 'toolbox' ) 
+    } );
+
+    function onRun() {
+      console.info( "========= onRun =========" );
+      var appId = vwf_view.kernel.find( "", "/" )[ 0 ];
+
+      vwf_view.kernel.setProperty( appId, "executing", true );
+    }
+
+    vwf_view.satProperty = function( nodeID, propertyName, propertyValue ) {
+
+    }
+
+</script>  
