Updates the blockly demo to use the sphere and cube from threes

--- a/public/blockly-node3/index.vwf.html
+++ b/public/blockly-node3/index.vwf.html
@@ -20,6 +20,9 @@
   </tr>
 </table>
 <xml id="toolbox" style="display: none;">
+  <category name="Objects">
+    <block type="node3_objects"></block>
+  </category>
   <category name="Node3">
     <block type="node3_castShadows"></block>
     <block type="node3_receiveShadows"></block>
