--- a/support/client/lib/index.html
+++ b/support/client/lib/index.html
@@ -52,6 +52,7 @@
     <script type="text/javascript" src="blockly/javascript_compressed.js"></script>
     <script type='text/javascript' src='blockly/msg/js/en.js'></script>
     <script type='text/javascript' src='blocks.js'></script>
+    <script type='text/javascript' src='blocks_object.js'></script>
     <script type='text/javascript' src='blocks_math3.js'></script>
     <script type='text/javascript' src='blocks_node3.js'></script>
 
