Adds the boolean type

--- a/public/blockly/index.vwf.html
+++ b/public/blockly/index.vwf.html
@@ -54,6 +54,7 @@
   </category>
   <category name="Type">
     <block type="math_number"></block>
+    <block type="type_boolean"></block>
     <block type="type_vector3"></block>
     <block type="type_vector4"></block>
   </category>
