Adds a box over blackly objects for toggling the Blockly UI

--- a/public/blockly-node3/index.vwf.html
+++ b/public/blockly-node3/index.vwf.html
@@ -11,19 +11,15 @@
 <!-- either express or implied. See the License for the specific language governing permissions  -->
 <!-- and limitations under the License.                                                          -->
 
-<link rel="stylesheet" href="index.vwf.css"></link>
-
-<!-- script type="text/javascript" src="blocks_object.js"></script -->
-<script type="text/javascript" src="blocks_node3.js"></script>
-<script type="text/javascript" src="blocks_math3.js"></script>
-
-<div id="blocklyDiv"></div>
-<div><button id="runButton" onclick="onRun()">Run</button></div>
-
+<div id="blocklyDiv" style="height: 400px; width: 560px; opacity: 0.6;"></div>
+<table width="200">
+  <tr>
+    <td>
+      <button id="runButton" onclick="onRun()">Run</button>
+    </td>
+  </tr>
+</table>
 <xml id="toolbox" style="display: none;">
-  <!-- category name="Objects">
-    <block type="node3_objects"></block>
-  </category -->
   <category name="Node3">
     <block type="node3_castShadows"></block>
     <block type="node3_receiveShadows"></block>
@@ -54,12 +50,10 @@
   </category>
   <category name="Type">
     <block type="math_number"></block>
-    <block type="type_boolean"></block>
     <block type="type_vector3"></block>
     <block type="type_vector4"></block>
   </category>
 </xml>
-
 <script type="text/javascript">
     Blockly.inject( document.getElementById( 'blocklyDiv' ), { 
       path: './blockly/', 
@@ -76,13 +70,5 @@
     vwf_view.satProperty = function( nodeID, propertyName, propertyValue ) {
 
     }
-    vwf_view.calledMethod = function( nodeID, methodName, methodParameters, methodValue ) {
-        switch( methodName ){
-            case "toggleBlockly":
-                console.info( "vwf_view.calledMethod( "+nodeID+", "+methodName+", "+methodParameters+" )" );
-                break;
-        }
-    }
 
 </script>  
-
