Adds the Vec2 class to the closure libraries
Vec3, and Vec4 are being included because they are dependencies of Mat4
and/or Quaternion.  Vec2 was not a dependency of either so I’ve added
this lib directly into the index.html.

--- a/support/client/lib/index.html
+++ b/support/client/lib/index.html
@@ -37,6 +37,7 @@
     <script type="text/javascript" src="async.js"></script>
 
     <script type="text/javascript" src="closure/base.js"></script>
+    <script type="text/javascript">goog.require('goog.vec.Vec2')</script>
     <script type="text/javascript">goog.require('goog.vec.Mat4')</script>
     <script type="text/javascript">goog.require('goog.vec.Quaternion')</script>
 
