Namespace the loading spinner html element id so it is unlikely to collide w/ app names

--- a/support/client/lib/index.html
+++ b/support/client/lib/index.html
@@ -151,7 +151,7 @@
     <!-- The main content renders to "#vwf-root", the item with the id "vwf-root".               -->
 
     <!-- The loading spinner -->
-    <div id="loadingSpinner" class="pace pace-active"><div class="pace-activity"></div></div>
+    <div id="vwf-loading-spinner" class="pace pace-active"><div class="pace-activity"></div></div>
 
     <div id="incompatibleBrowser">
         <div>
