--- a/public/404.html
+++ b/public/404.html
@@ -88,7 +88,7 @@
     </p> 
 
     <p class="small">
-      Development of the Virtual World Framework is sponsored by the Department of Defense and is licensed using Apache II. Source is available on <a href="http://www.github.com/virtual-world-framework/vwf">Github</a>.
+      Development of the Virtual World Framework is sponsored by the Department of Defense and is licensed under the Apache License, Version 2.0. Source is available on <a href="http://www.github.com/virtual-world-framework/vwf">Github</a>.
     </p> 
   </body>  
 </html>
