Got mespeak.js added.

--- a/support/client/lib/index.html
+++ b/support/client/lib/index.html
@@ -46,6 +46,7 @@
 
     <script type="text/javascript" src="alea.js"></script>
     <script type="text/javascript" src="mash.js"></script>
+    <script type="text/javascript" src="mespeak.js"></script>
 
     <script type="text/javascript" src="Class.create.js"></script>
     <script type="text/javascript" src="rAF.js"></script>
@@ -56,6 +57,7 @@
     <!-- reference, and no other objects are globally visible.                                   -->
 
     <script type="text/javascript" src="vwf.js"></script>
+	<script type="text/javascript" src="mespeak.js"></script>
 
     <!-- The core framework manages the simulation and synchronizes it across worlds shared by   -->
     <!-- multiple users. But, the manner in which the simulation is expressed is controlled by   -->
