Adds the new css files for the viewer/widget

--- a/public/agi/cesium/index.vwf.html
+++ b/public/agi/cesium/index.vwf.html
@@ -15,19 +15,22 @@
 <html>
     <head>
         <title>Cesium VWF Demo</title>
-        <style>
+        <!-- style>
           @import url( CesiumWidget.css );
           body {
             padding: 0;
             margin: 0;
             overflow: hidden;
           }
-        </style>
+        </style -->
         <script type="text/javascript">
             document.title = "Cesium VWF Demo";
         </script>    
     </head>
     <body>
+        <style>
+            @import url(./templates/bucket.css);
+        </style>
         <div class="vwf-main-content" align="center"></div>
     </body>
 </html>
