Fix requirements page link on browser compatibility warning. Fixes #4177.

--- a/support/client/lib/index.html
+++ b/support/client/lib/index.html
@@ -155,7 +155,7 @@
 
     <div id="incompatibleBrowser">
         <div>
-            <span style="color:#3090C7;"><br/><br/>Your browser does not support Virtual World Framework. Please review our <a href='http://www.virtual.wf/documentation.html#requirements'>requirements</a> for supported browser versions.</span>
+            <span style="color:#3090C7;"><br/><br/>Your browser does not support Virtual World Framework. Please review our <a href='https://virtual.wf/requirements.html'>requirements</a> for supported browser versions.</span>
         </div>
     </div>
     <div id="vwf-root"></div>
