Mount the client at `/client`.

--- a/support/client/lib/index.html
+++ b/support/client/lib/index.html
@@ -25,6 +25,8 @@
     <title>Virtual World Framework</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
 
+    <base href="client/"/>
+
     <meta name="viewport" content="initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
 
     <script type="text/javascript" src="compatibilitycheck.js"></script>
