Well, now the video is centered correctly, but mouse dragging is broken?

--- a/support/client/lib/index.html
+++ b/support/client/lib/index.html
@@ -138,6 +138,8 @@
     <!-- simulation state in HTML on the main page.                                              -->
 
     <link rel="stylesheet" type="text/css" href="index.css" />
+    <!-- <link rel="stylesheet" type="text/css" href="minimal_jplayer_style.css" /> -->
+
     <link rel="stylesheet" type="text/css" href="vwf/view/editor/editor.css" />
 
   </head>
@@ -146,7 +148,19 @@
 
     <!-- Generic clients may have nearly empty pages, but pages for custom clients may be laid   -->
     <!-- out in any manner desired. Any view and models that render to the page should be        -->
-    <!-- instructed where to attach their content.                                               -->
+    <!-- instructed where to attach their content.    -->
+
+    <div id="jp_container_1" class="jp-video jp-video-360p">
+ 
+        <!--container in which our video will be played-->
+        <div id="jquery_jplayer_1" class="jp-jplayer"></div>
+     
+        <!--main containers for our controls-->
+        <div class="jp-gui">
+            <div class="jp-interface">
+            </div>
+        </div> 
+    </div>                                           
 
     <!-- The main content renders to "#vwf-root", the item with the id "vwf-root".               -->
 
