--- a/support/client/lib/index.html
+++ b/support/client/lib/index.html
@@ -78,64 +78,67 @@
         var match;
         var application;
         var regex = /([^&=]+)=?([^&]*)/g;
-        var version = "2.5";
-
-        var requireConfig = {
-            paths: {
-                jquery: "jquery-1.10.2.min",
-                "jquery-ui": "jquery-ui-1.10.3.custom.min",
-                hammer: "jquery.hammer",
-            },
-            shim: {                
-                "jquery-ui": {
-                    deps: ["jquery"],
-                    exports: "$"
+        // version mustn't be cached
+        require(['version.js?latest='+(new Date()).getTime()], function(version) {
+            var requireConfig = {
+                paths: {
+                    jquery: "jquery-1.10.2.min",
+                    "jquery-ui": "jquery-ui-1.10.3.custom.min",
+                    hammer: "jquery.hammer",
                 },
-                "jquery-encoder-0.1.0": ["jquery"],
-                "hammer": {
-                    deps: ["jquery"],
-                    exports: "Hammer"
+                shim: {
+                    "jquery-ui": {
+                        deps: ["jquery"],
+                        exports: "$"
+                    },
+                    "jquery-encoder-0.1.0": ["jquery"],
+                    "hammer": {
+                        deps: ["jquery"],
+                        exports: "Hammer"
+                    }
+                },
+                // used to bust the cache, for development use (new Date()).getTime()
+                urlArgs: "v="+version.toString()
+            };
+            require(requireConfig, ["jquery", "jquery-encoder-0.1.0"], function($) {
+
+                while(match = regex.exec(queryString)) {
+                    var key = $.encoder.canonicalize(match[1]);
+                    var parameters = $.encoder.canonicalize(match[2]);
+                    if(key == "application") {
+                        // Get the application specification if one is provided in the query string.
+                        application = parameters;
+                    }
+                    else {
+                        try {
+                            parameters = JSON.parse(parameters);
+                        }
+                        catch(e) {
+                        }
+                        userLibraries["model"]["vwf/model/" + key] = (parameters && parameters != "") ? parameters : undefined;
+                    }
                 }
-            },
-            // used to bust the cache
-            urlArgs: "v="+version // only use this for debug (new Date()).getTime()
-        };
-        require(requireConfig, ["jquery", "jquery-encoder-0.1.0"], function($) {
-            while(match = regex.exec(queryString)) {
-                var key = $.encoder.canonicalize(match[1]);
-                var parameters = $.encoder.canonicalize(match[2]);
-                if(key == "application") {
-                    // Get the application specification if one is provided in the query string.
-                    application = parameters;
-                }
-                else {
+
+                while(match = regex.exec(hashString)) {
+                    var key = $.encoder.canonicalize(match[1]);
+                    var parameters = $.encoder.canonicalize(match[2]);
                     try {
                         parameters = JSON.parse(parameters);
                     }
                     catch(e) {
                     }
-                    userLibraries["model"]["vwf/model/" + key] = (parameters && parameters != "") ? parameters : undefined;
+                    userLibraries["view"]["vwf/view/" + key] = (parameters && parameters != "") ? parameters : undefined;
+                    if(key == "google-earth") {
+                        googleEarth = true;
+                    }
                 }
-            }
 
-            while(match = regex.exec(hashString)) {
-                var key = $.encoder.canonicalize(match[1]);
-                var parameters = $.encoder.canonicalize(match[2]);
-                try {
-                    parameters = JSON.parse(parameters);
-                }
-                catch(e) {
-                }
-                userLibraries["view"]["vwf/view/" + key] = (parameters && parameters != "") ? parameters : undefined;
-                if(key == "google-earth") {
-                    googleEarth = true;
-                }
-            }
+                googleEarth && document.write( "<scr" + "ipt type='text/javascript' src='http://www.google.com/jsapi?hl=en&amp;key=ABQIAAAAwbkbZLyhsmTCWXbTcjbgbRSzHs7K5SvaUdm8ua-Xxy_-2dYwMxQMhnagaawTo7L1FE1-amhuQxIlXw'></scr" + "ipt>");
 
-            googleEarth && document.write( "<scr" + "ipt type='text/javascript' src='http://www.google.com/jsapi?hl=en&amp;key=ABQIAAAAwbkbZLyhsmTCWXbTcjbgbRSzHs7K5SvaUdm8ua-Xxy_-2dYwMxQMhnagaawTo7L1FE1-amhuQxIlXw'></scr" + "ipt>");
-
-            vwf.loadConfiguration(application, userLibraries, compatibilityCheck);
+                vwf.loadConfiguration(application, userLibraries, compatibilityCheck);
+            });
         });
+
     </script>
     <script type="text/javascript">googleEarth && google.load( "earth", "1" )</script>
     
