--- a/support/client/lib/index.html
+++ b/support/client/lib/index.html
@@ -53,6 +53,7 @@
     <script type="text/javascript" src="Class.create.js?mtime=timestamp"></script>
     <script type="text/javascript" src="rAF.js?mtime=timestamp"></script>
     <script type="text/javascript" src="performance.now-polyfill.js?mtime=timestamp"></script>
+    <script type="text/javascript" src="ITDG/version.js?mtime=timestamp"></script>
 
     <!-- This is the main client library. vwf.js creates a framework manager and attaches it to  -->
     <!-- the global window object as window.vwf. All access to the framework is through that     -->
@@ -78,65 +79,62 @@
         var match;
         var application;
         var regex = /([^&=]+)=?([^&]*)/g;
-        // version mustn't be cached
-        require(['version.js?latest='+(new Date()).getTime()], function(version) {
-            var requireConfig = {
-                paths: {
-                    jquery: "jquery-1.10.2.min",
-                    "jquery-ui": "jquery-ui-1.10.3.custom.min",
-                    hammer: "jquery.hammer",
+        var requireConfig = {
+            paths: {
+                jquery: "jquery-1.10.2.min",
+                "jquery-ui": "jquery-ui-1.10.3.custom.min",
+                hammer: "jquery.hammer",
+            },
+            shim: {
+                "jquery-ui": {
+                    deps: ["jquery"],
+                    exports: "$"
                 },
-                shim: {
-                    "jquery-ui": {
-                        deps: ["jquery"],
-                        exports: "$"
-                    },
-                    "jquery-encoder-0.1.0": ["jquery"],
-                    "hammer": {
-                        deps: ["jquery"],
-                        exports: "Hammer"
-                    }
-                },
-                // used to bust the cache, for development use (new Date()).getTime()
-                urlArgs: "v="+version.toString()
-            };
-            require(requireConfig, ["jquery", "jquery-encoder-0.1.0"], function($) {
-
-                while(match = regex.exec(queryString)) {
-                    var key = $.encoder.canonicalize(match[1]);
-                    var parameters = $.encoder.canonicalize(match[2]);
-                    if(key == "application") {
-                        // Get the application specification if one is provided in the query string.
-                        application = parameters;
-                    }
-                    else {
-                        try {
-                            parameters = JSON.parse(parameters);
-                        }
-                        catch(e) {
-                        }
-                        userLibraries["model"]["vwf/model/" + key] = (parameters && parameters != "") ? parameters : undefined;
-                    }
+                "jquery-encoder-0.1.0": ["jquery"],
+                "hammer": {
+                    deps: ["jquery"],
+                    exports: "Hammer"
                 }
+            },
+            // used to bust the cache, for development use (new Date()).getTime()
+            urlArgs: "v="+version.toString()
+        };
+        require(requireConfig, ["jquery", "jquery-encoder-0.1.0"], function($) {
 
-                while(match = regex.exec(hashString)) {
-                    var key = $.encoder.canonicalize(match[1]);
-                    var parameters = $.encoder.canonicalize(match[2]);
+            while(match = regex.exec(queryString)) {
+                var key = $.encoder.canonicalize(match[1]);
+                var parameters = $.encoder.canonicalize(match[2]);
+                if(key == "application") {
+                    // Get the application specification if one is provided in the query string.
+                    application = parameters;
+                }
+                else {
                     try {
                         parameters = JSON.parse(parameters);
                     }
                     catch(e) {
                     }
-                    userLibraries["view"]["vwf/view/" + key] = (parameters && parameters != "") ? parameters : undefined;
-                    if(key == "google-earth") {
-                        googleEarth = true;
-                    }
+                    userLibraries["model"]["vwf/model/" + key] = (parameters && parameters != "") ? parameters : undefined;
                 }
+            }
 
-                googleEarth && document.write( "<scr" + "ipt type='text/javascript' src='http://www.google.com/jsapi?hl=en&amp;key=ABQIAAAAwbkbZLyhsmTCWXbTcjbgbRSzHs7K5SvaUdm8ua-Xxy_-2dYwMxQMhnagaawTo7L1FE1-amhuQxIlXw'></scr" + "ipt>");
+            while(match = regex.exec(hashString)) {
+                var key = $.encoder.canonicalize(match[1]);
+                var parameters = $.encoder.canonicalize(match[2]);
+                try {
+                    parameters = JSON.parse(parameters);
+                }
+                catch(e) {
+                }
+                userLibraries["view"]["vwf/view/" + key] = (parameters && parameters != "") ? parameters : undefined;
+                if(key == "google-earth") {
+                    googleEarth = true;
+                }
+            }
 
-                vwf.loadConfiguration(application, userLibraries, compatibilityCheck);
-            });
+            googleEarth && document.write( "<scr" + "ipt type='text/javascript' src='http://www.google.com/jsapi?hl=en&amp;key=ABQIAAAAwbkbZLyhsmTCWXbTcjbgbRSzHs7K5SvaUdm8ua-Xxy_-2dYwMxQMhnagaawTo7L1FE1-amhuQxIlXw'></scr" + "ipt>");
+
+            vwf.loadConfiguration(application, userLibraries, compatibilityCheck);
         });
 
     </script>
