update socket.io lib from 0.9.x to 1.x, make VWF compatible to run with the latest NodeJS (6.x or 7.x)

--- a/support/client/lib/index.html
+++ b/support/client/lib/index.html
@@ -29,8 +29,8 @@
 
     <script type="text/javascript" src="compatibilitycheck.js"></script>
 
-    <script type="text/javascript" src="socket.io.js"></script>
-    <script type="text/javascript" src="socket.io-sessionid-patch.js"></script>
+    <script type="text/javascript" src="socket.io/socket.io.js"></script>
+    <!-- <script type="text/javascript" src="socket.io-sessionid-patch.js"></script> -->
 
     <script type="text/javascript" src="require.js"></script>
 
