--- a/support/lobby/login.html
+++ b/support/lobby/login.html
@@ -3,8 +3,12 @@
 <html><head>
 
   <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+    
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+  
+
+<meta name="viewport" content="width = device-width, initial-scale = .5" >
+
 
   <title>Virtual World Framework lobby</title>
 
@@ -13,6 +17,7 @@
   <link rel="stylesheet" href="login.bundle.css">
 
 </head><body>
+
 
   <div id="root" class="container"></div>
 
