scaled lobby and scenario screen for mobile devices

--- a/support/client/lib/index.html
+++ b/support/client/lib/index.html
@@ -25,7 +25,7 @@
     <title>Virtual World Framework</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
 
-    <meta name="viewport" content="initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
     <link rel="stylesheet" type="text/css" href="index.css?mtime=timestamp" />
     <link rel="stylesheet" type="text/css" href="vwf/view/editor/editor.css?mtime=timestamp" />
