added layout tab in mobile interface. still under construction

--- a/support/client/lib/index.html
+++ b/support/client/lib/index.html
@@ -143,6 +143,7 @@
 
   <body>
 
+
     <!-- Generic clients may have nearly empty pages, but pages for custom clients may be laid   -->
     <!-- out in any manner desired. Any view and models that render to the page should be        -->
     <!-- instructed where to attach their content.                                               -->
@@ -158,7 +159,7 @@
         </div>
     </div>
     <div id="vwf-root"></div>
-  
+    <tbody></tbody>
   </body>
 
 </html>
